# CerberusGuard

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LOCAL_SETUP.md  README.md  backlog.yaml
crates/cerberus-collector/: Cargo.toml
crates/cerberus-collector/src/: main.rs
crates/cerberus-policy/: Cargo.toml
crates/cerberus-policy/src/: main.rs
crates/cerberus-types/: Cargo.toml
crates/cerberus-types/src/: lib.rs
dashboard/: README.md  package-lock.json
dashboard/app/: page.tsx
demo/: SAFETY.md  honeypot-cleanup.sh  honeypot-setup.sh  honeypot.py  run-demo.sh  run-malicious-agent.py  start-chain.sh
demo/attack-scenarios/poisoned-repo/: README.md  package-lock.json  package.json
demo/attack-scenarios/poisoned-repo/scripts/: setup.js
demo/attack-scenarios/poisoned-repo/src/: index.ts  utils.ts
demo/attack-scenarios/poisoned-repo/tests/: test.ts
demo/scenarios/: healthy-session.py
policy/examples/: healthcare-strict.yaml
scripts/: generate_cover.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/cerberusguard/: __init__.py  client.py
sdk/python/src/cerberusguard/adapters/: clawcrate.py  lobstertrap.py  pennyprompt.py
