[package]
name = "cerberus-collector"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8"
clap.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
cerberus-types = { path = "../cerberus-types" }
